--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,11 +16,11 @@ body {
 
 .hero-unit {
     margin: 50px auto 0 auto;
-    width: 300px;
+    width: 900px;
     font-size: 18px;
     font-weight: 200;
     line-height: 30px;
-    background-color: #eee;
+    background-color: #F79608;
     border-radius: 6px;
     padding: 60px;
 }
