--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
+  <h1>AppVerse Client Framework Incubator</h1>
+  <p>Some aspects will be included in this framework.</p>
   <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
+      <li ng-repeat="issue in issuesList">{{issue}}</li>
   </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+  <p>..we're working on it.</p>
+  <h3>Enjoy coding!</h3>
 </div>
