--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,21 @@
 <div class="hero-unit">
   <h1>AppVerse Client Framework Incubator</h1>
-  <p>Some aspects will be included in this framework.</p>
+  <p>Some topics will be included in this framework.</p>
+
+<!--AngularUI Bootstrap directives work on classes, 
+so simply by adding a class to tags we’ll have a fully 
+functioning style feature. For exmple:
+  <ul>
+    <li class="dropdown">
+      <a class="dropdown-toggle">
+        Click here to see topics to be included.
+      </a>
+      <ul class="dropdown-menu">
+        <li ng-repeat="issue in issuesList">{{issue}}</li>
+      </ul>
+    </li>
+  </ul>
+-->
   <ul>
       <li ng-repeat="issue in issuesList">{{issue}}</li>
   </ul>
