Integration of ui-router for site navigation

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,24 +1,20 @@
-<div class="hero-unit">
-  <h1>AppVerse Client Framework Incubator</h1>
-  <p>Some topics will be included in this framework.</p>
-
-<!--AngularUI Bootstrap directives work on classes, 
-so simply by adding a class to tags we’ll have a fully 
-functioning style feature. For exmple:
-  <ul>
-    <li class="dropdown">
-      <a class="dropdown-toggle">
-        Click here to see topics to be included.
-      </a>
-      <ul class="dropdown-menu">
-        <li ng-repeat="issue in issuesList">{{issue}}</li>
-      </ul>
-    </li>
-  </ul>
--->
-  <ul>
-      <li ng-repeat="issue in issuesList">{{issue}}</li>
-  </ul>
-  <p>..we're working on it.</p>
-  <h3>Enjoy coding!</h3>
+<div>
+    <p class="lead"><h2>Have a look on planned features..</h2></p>
+    <div>
+        <p class="lead">Routing</p>
+        <p>Use the menu bar to navigate.
+        Pay attention to the <code>$state</code> and <code>$stateParams</code> values below.</p>
+        <p>Regarding of links, click on these links—<a href="#/c?id=1">Security</a> or ' +
+        <a href="#/user/2">Styling</a>—to see a url redirect in action.</p>
+    </div>
+    <div>
+         <p class="lead">Styling</p>
+        <p>Bootstrap if completely integrated into the framework.
+        Pay attention to specific directives.</p>
+    </div>
 </div>
+
+
+
+
+
