--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,3 +30,19 @@ body {
     line-height: 1;
     letter-spacing: -1px;
 }
+
+.fade-enter-setup, .fade-leave-setup {
+  transition: opacity 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+}
+
+.fade-enter-setup,
+
+.fade-leave-setup.fade-leave-start {
+  opacity: 0;
+}
+
+.fade-leave-setup,
+
+.fade-enter-setup.fade-enter-start {
+  opacity: 1;
+}
