Included state-based navigation. Included UI demo based on bootstrap integration. Modified landing page.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,20 +1,22 @@
 <div>
+    <p class="lead"><h3>This is the Appverse Web HTML5/JavaScript Demo</h3></p>
     <p class="lead"><h2>Have a look on planned features..</h2></p>
     <div>
         <p class="lead">Routing</p>
+        <p>The routing is not based on default AngularJS routing mechanism.</p>
+        <p>Unlike the built-in ngRoute service, UI-Router can nest views as it works based on states, not URLs.</p>
         <p>Use the menu bar to navigate.
-        Pay attention to the <code>$state</code> and <code>$stateParams</code> values below.</p>
+        Pay attention to the <code>$state</code> and <code>$stateParams</code> values.</p>
         <p>Regarding of links, click on these links—<a href="#/c?id=1">Security</a> or ' +
         <a href="#/user/2">Styling</a>—to see a url redirect in action.</p>
     </div>
     <div>
          <p class="lead">Styling</p>
-        <p>Bootstrap if completely integrated into the framework.
+        <p>Bootstrap if completely integrated into the framework with UI-Bootstrap.
         Pay attention to specific directives.</p>
+        <p>It contains a set of native AngularJS directives based on Twitter Bootstrap's markup and CSS.</p>
+        <p>As a result no dependency on jQuery or Bootstrap's JavaScript is required.</p>
+        <p>Go to the <a href="#/ui">UI Demo</a> section to see some samples about UIs.</p>
+        <p>Warning: IE7 and IE8 are not supported!</p>
     </div>
 </div>
-
-
-
-
-
