--- a/app/views/topics/topics.html
+++ b/app/views/topics/topics.html
@@ -2,6 +2,7 @@
   <div class="span3">
     <div class="pa-sidebar well well-small">
       <ul class="nav nav-list">
+<!--        <li ng-class="{ active: $state.includes('uidemo.list') }"><a ui-sref="uidemo.list">UI in development!</a></li>-->
         <li ng-class="{ active: $state.includes('topics.list') }"><a ui-sref="topics.list">Topics in development!</a></li>
         <li class="nav-header">We're working on..</li>
 
