--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,11 @@
 $iconSpritePath: "../images/glyphicons-halflings.png";
 $iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
 
+/* Import specific css here */
 @import "bootstrap-sass/lib/bootstrap";
+@import "fade";
 
-/* Put your CSS here */
+/* Put main CSS here */
 html, body {
   margin: 20px;
 }
@@ -29,20 +31,4 @@ body {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
-}
-
-.fade-enter-setup, .fade-leave-setup {
-  transition: opacity 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
-}
-
-.fade-enter-setup,
-
-.fade-leave-setup.fade-leave-start {
-  opacity: 0;
-}
-
-.fade-leave-setup,
-
-.fade-enter-setup.fade-enter-start {
-  opacity: 1;
 }
