Modified landing page with collapsable divs. Included URLS for Appverse and Stash.

--- a/app/views/demo/ui-bootstrap/ui-b.html
+++ b/app/views/demo/ui-bootstrap/ui-b.html
@@ -9,9 +9,9 @@
     <p class="lead">Collapse</p>
     <div ng-controller="CollapseDemoCtrl">
 
-        <button class="btn" ng-click="isCollapsed = !isCollapsed">Toggle collapse</button>
+        <button class="btn" ng-click="uidemoCollapsed = !uidemoCollapsed">Toggle collapse</button>
         <hr>
-        <div collapse="isCollapsed">
+        <div collapse="uidemoCollapsed">
              <div class="well well-large">Some content</div>
         </div>
     </div>
