--- a/app/views/demo/ui-bootstrap/ui-b.html
+++ b/app/views/demo/ui-bootstrap/ui-b.html
@@ -42,6 +42,30 @@
         <button class="btn btn-small" ng-click="toggleMin()" tooltip="After today restriction">Min date</button>
     </div>
 
+    <hr/><hr/>
+    <div ng-controller="ModalDemoCtrl">
+        <script type="text/ng-template" id="myModalContent.html">
+            <div class="modal-header">
+                <h3>I'm a modal!</h3>
+            </div>
+            <div class="modal-body">
+                <ul>
+                    <li ng-repeat="item in items">
+                        <a ng-click="selected.item = item">{{ item }}</a>
+                    </li>
+                </ul>
+                Selected: <b>{{ selected.item }}</b>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" ng-click="ok()">OK</button>
+                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+            </div>
+        </script>
+
+        <button class="btn" ng-click="open()">Open a modal window!</button>
+        <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+    </div>
+
     <div>
            <hr/>
            <p class="lead">And many others..</p>
