Included common api modules

--- a/app/views/demo/ui-bootstrap/ui-b.html
+++ b/app/views/demo/ui-bootstrap/ui-b.html
@@ -55,6 +55,7 @@
                     </li>
                 </ul>
                 Selected: <b>{{ selected.item }}</b>
+                //<input type="text" name="titleData" id="titleData" class="form-control" ng-model="input.title">
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" ng-click="ok()">OK</button>
