Included common api modules

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@ $iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
 
 /* Import specific css here */
 @import "bootstrap-sass/lib/bootstrap";
+@import "bootstrap-sass/lib/responsive";
 @import "fade";
 
 /* Put main CSS here */
