- Formatted HTML - Added getSelectedItem function to retrieve topic item

--- a/app/views/topics/topics.detail.item.edit.html
+++ b/app/views/topics/topics.detail.item.edit.html
@@ -1,3 +1,7 @@
 <hr>
-<h4>{{item.type}} <button class="btn" ng-click="done()">Done</button></h4>
-<div><input type="text" ng-model="item.value" /></div>
+<h4>{{getSelectedItem().type}}
+    <button class="btn" ng-click="done()">Done</button>
+</h4>
+<div>
+    <input type="text" ng-model="getSelectedItem().value" />
+</div>
