--- a/app/views/topics/topics.detail.item.html
+++ b/app/views/topics/topics.detail.item.html
@@ -1,3 +1,5 @@
 <hr>
-<h4>{{item.type}} <button class="btn" ng-click="edit()">Edit</button></h4>
-<div>{{item.value}}</div>
+<h4>{{getSelectedItem().type}}
+    <button class="btn" ng-click="edit()">Edit</button>
+</h4>
+<div>{{getSelectedItem().value}}</div>
