--- a/app/views/topics/topics.html
+++ b/app/views/topics/topics.html
@@ -1,28 +1,30 @@
 <div class="row">
-  <div class="span3">
-    <div class="pa-sidebar well well-small">
-      <ul class="nav nav-list">
-<!--        <li ng-class="{ active: $state.includes('uidemo.list') }"><a ui-sref="uidemo.list">UI in development!</a></li>-->
-        <li ng-class="{ active: $state.includes('topics.list') }"><a ui-sref="topics.list">Topics in development!</a></li>
-        <li class="nav-header">We're working on..</li>
+    <div class="span3">
+        <div class="pa-sidebar well well-small">
+            <ul class="nav nav-list">
+                <li ng-class="{ active: $state.includes('topics.list') }">
+                    <a ui-sref="topics.list">Topics in development!</a>
+                </li>
+                <li class="nav-header">We're working on..</li>
 
-        <!-- This <li> will only add the 'active' class if 'contacts.detail' or its descendants are active
+                <!-- This <li> will only add the 'active' class if 'contacts.detail' or its descendants are active
              AND if it is the link for the active contact (aka contactId) -->
-        <li ng-repeat="topic in topics | limitTo:3"
-            ng-class="{ active: $state.includes('topics.detail') && $stateParams.topicId == topic.id }">
+                <li rest rest-path="topics.json" rest-name="topics"/>
+                <alert ng-show="topicsError" type="error" close="topicsError=false">Error loading topics</alert>
+                <li ng-repeat="topic in topics | limitTo:3" ng-class="{ active: $state.includes('topics.detail') && $stateParams.topicId == topic.id }">
 
-          <!-- Here's a ui-sref that is also providing necessary parameters -->
-          <a ui-sref="topics.detail({topicId:topic.id})">{{topic.name}}</a>
-        </li>
-      </ul>
-      <hr>
-      <button class="btn" ng-click="goToRandom()">Show a random topic</button>
+                    <!-- Here's a ui-sref that is also providing necessary parameters -->
+                    <a ui-sref="topics.detail({topicId:topic.id})">{{topic.name}}</a>
+                </li>
+            </ul>
+            <hr>
+            <button class="btn" ng-click="goToRandom()">Show a random topic</button>
 
-      <!-- Another named view -->
-      <div ui-view="menuTip"></div>
+            <!-- Another named view -->
+            <div ui-view="menuTip"></div>
+        </div>
     </div>
-  </div>
 
-  <!-- Our unnamed main ui-view for this template -->
-  <div ui-view class="span9" ng-animate="{enter:'fade-enter'}"></div>
+    <!-- Our unnamed main ui-view for this template -->
+    <div ui-view class="span9" ng-animate="{enter:'fade-enter'}"></div>
 </div>
