--- a/app/views/topics/topics.html
+++ b/app/views/topics/topics.html
@@ -9,13 +9,14 @@
 
                 <!-- This <li> will only add the 'active' class if 'contacts.detail' or its descendants are active
              AND if it is the link for the active contact (aka contactId) -->
-                <li rest rest-path="topics.json" rest-name="topics"/>
-                <alert ng-show="topicsError" type="error" close="topicsError=false">Error loading topics</alert>
+                <li rest rest-path="topics.json" rest-name="topics" rest-method="post" />
+                <alert ng-show="topicsError" class="alert-error" close="topicsError=false">Error loading topics</alert>
                 <li ng-repeat="topic in topics | limitTo:3" ng-class="{ active: $state.includes('topics.detail') && $stateParams.topicId == topic.id }">
 
                     <!-- Here's a ui-sref that is also providing necessary parameters -->
                     <a ui-sref="topics.detail({topicId:topic.id})">{{topic.name}}</a>
                 </li>
+                <h6>(Retrieved using rest directive)</h6>
             </ul>
             <hr>
             <button class="btn" ng-click="goToRandom()">Show a random topic</button>
