--- a/app/views/topics/topics.list.html
+++ b/app/views/topics/topics.list.html
@@ -1,6 +1,7 @@
 <h2>Planned Topics</h2>
 <ul>
-  <li ng-repeat="topic in topics">
-    <a ui-sref="topics.detail({topicId:topic.id})">{{topic.name}}</a>
+  <li ng-repeat="onetopic in alltopics">
+    <a ui-sref="topics.detail({topicId:onetopic.id})">{{onetopic.name}}</a>
   </li>
 </ul>
+<h6>(Retrieved using RESTFactory)</h6>
