--- a/app/views/topics/topics.detail.html
+++ b/app/views/topics/topics.detail.html
@@ -1,15 +1,13 @@
+<p rest rest-path="topics" rest-id="{{$stateParams.topicId}}" rest-name="topic" rest-loading-text="Loading topic..." rest-error-text="Topic <b>{{$stateParams.topicId}}</b> not found on server."></p>
 <h2>{{topic.name}}</h2>
-<p rest rest-path="topics/{{$stateParams.topicId}}.json" rest-name="topic" rest-loading-text="Loading topic..." rest-error-text="Topic <b>{{topic.name}}</b> not found on server."></p>
-<alert ng-show="topicsError || topicError" class="alert-error" close="topicsError=false;topicError=false">Error loading topic</alert>
 <ul>
     <li ng-repeat="item in topic.items">
-
         <!--
            Regarding of ui-router, here's another ui-sref directive for links.
            THIS time we are passing parameters
            AND inheriting parameters from active ancestor states. So we don't
            need to resupply the topicId parameter. -->
-        <a ui-sref="topics.detail.item({itemId:item.id})">{{item.type}}</a>
+        <a ui-sref="topics.detail.item({itemId:item.id})">{{item.name}}</a>
     </li>
 </ul>
 <div ui-view ng-animate="{enter:'fade-enter'}">
