--- a/app/views/topics/topics.detail.item.edit.html
+++ b/app/views/topics/topics.detail.item.edit.html
@@ -1,7 +1,12 @@
 <hr>
-<h4>{{getSelectedItem().type}}
-    <button class="btn" ng-click="done()">Done</button>
-</h4>
-<div>
-    <input type="text" ng-model="getSelectedItem().value" />
+<div rest rest-path="topics/{{$stateParams.topicId}}/items" rest-id="{{$stateParams.itemId}}" rest-name="itemEdit" />
+<alert ng-show="itemEditLoading">Loading item...</alert>
+<alert ng-show="itemEditError" class="alert-error">Error loading item.</alert>
+<div ng-hide="itemEditLoading || itemEditError">
+    <h4>{{itemEdit.name}}
+        <button class="btn" ng-click="done()">Done</button>
+    </h4>
+    <div>
+        <input type="text" ng-model="itemEdit.value" />
+    </div>
 </div>
