--- a/app/views/topics/topics.list.html
+++ b/app/views/topics/topics.list.html
@@ -4,4 +4,4 @@
     <a ui-sref="topics.detail({topicId:onetopic.id})">{{onetopic.name}}</a>
   </li>
 </ul>
-<h6>(Retrieved using RESTFactory)</h6>
+<small>(Retrieved using RESTFactory)</small>
