--- a/app/views/demo/serverpush/stockmarket.html
+++ b/app/views/demo/serverpush/stockmarket.html
@@ -130,8 +130,8 @@
 
 
     <div>
-        <button class="btn" ng-click="startPush()">Start data pushing from server</button>
-        <button class="btn" ng-click="endPush()">Stop data pushing from server</button>
+        <button  class="btn btn-info btn-primary" ng-click="startPush()">Start data pushing from server</button>
+        <button  class="btn btn-info btn-primary" ng-click="endPush()">Stop data pushing from server</button>
     </div>
 
 </div>
