Included authentication section

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,33 @@
-<div ng-controller="CollapseDemoCtrl">
+
+<div id="OAuth2Logo" >
+     <a ng-href="http://oauth.net/2/"><img ng-src="/images/OAuth2.png" style="width: 50px; height: 50px"/>Based on OAuth2</a>
+</div>
+
+
+<div ng-controller="GooglePlusLoginCtrl" ng-cloak>
+   
+      <div id="gConnect" ng-hide = "loginStatus == 'connected'">
+        <div id="gButton"/>
+      </div>
+      <p class="lead">User Status: {{ loginStatus }}</p>
+      
+      
+      <div id="authOps" ng-show ="loginStatus == 'connected'">
+          
+        <p class="lead">User Profile</p>
+        <div>
+          <img ng-src={{profile.image.url}} />
+          <p>{{ profile.displayName }}</p>
+          <p>{{ profile.eMail }}</p>
+        </div>
+        
+        <button ng-click="logout()">Disconnect</button>
+ 
+      </div>
+
+  
+
+<div ng-controller="CollapseDemoCtrl" ng-show ="loginStatus == 'connected'">
 	<p class="lead">
 		<h3>This is the Appverse Web HTML5/JavaScript Demo</h3>
 	</p>
@@ -130,4 +159,6 @@
 		</ul>
 	</div>
 
+    </div>
+      
 </div>
