Fixed problem with list of topics when disconnected

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,7 +27,7 @@
 
   
 
-<div ng-controller="CollapseDemoCtrl" ng-show ="loginStatus == ('connected' || 'Security not enabled')">
+<div ng-controller="CollapseDemoCtrl" ng-show ="loginStatus == 'connected' || loginStatus == 'Security not enabled'">
 	<p class="lead">
 		<h3>This is the Appverse Web HTML5/JavaScript Demo</h3>
 	</p>
