--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,22 +1,23 @@
-$iconSpritePath: "../images/glyphicons-halflings.png";
-$iconWhiteSpritePath: "../images/glyphicons-halflings-white.png";
+$iconSpritePath:"../images/glyphicons-halflings.png";
+ $iconWhiteSpritePath:"../images/glyphicons-halflings-white.png";
 
 /* Import specific css here */
+
 @import "bootstrap-sass/lib/bootstrap";
 @import "bootstrap-sass/lib/responsive";
 @import "fade";
 
 /* Put main CSS here */
-html, body {
-  margin: 20px;
-}
 
+html,
+body {
+    margin: 20px;
+}
 body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
 }
-
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 900px;
@@ -27,13 +28,11 @@ body {
     border-radius: 6px;
     padding: 60px;
 }
-
 .hero-unit h1 {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
 }
-
 .trade-button {
-  width: 24px;
+    width: 24px;
 }
